fix(auth): border layout issue solved

--- a/typescript-version/full-version/src/@core/scss/base/pages/page-auth.scss
+++ b/typescript-version/full-version/src/@core/scss/base/pages/page-auth.scss
@@ -5,3 +5,11 @@
 .auth-card {
   z-index: 1 !important;
 }
+
+@media (min-width: 960px) {
+  .skin--bordered {
+    .auth-card-v2 {
+      border-inline-start: 1px solid rgba(var(--v-border-color), var(--v-border-opacity));
+    }
+  }
+}
